--- a/20170808hack-ios/Base.lproj/Main.storyboard
+++ b/20170808hack-ios/Base.lproj/Main.storyboard
@@ -346,21 +346,30 @@
                                     <constraint firstAttribute="height" constant="205" id="Ajz-LU-9Nf"/>
                                 </constraints>
                             </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ds4-Sa-tuM">
+                                <rect key="frame" x="0.0" y="354" width="375" height="264"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Ds4-Sa-tuM" firstAttribute="trailing" secondItem="9y1-Eq-F2Q" secondAttribute="trailing" id="9LC-p7-kuH"/>
                             <constraint firstItem="9y1-Eq-F2Q" firstAttribute="top" secondItem="JbW-u0-eMk" secondAttribute="top" id="EYY-Yn-1oO"/>
                             <constraint firstItem="l9x-vG-Qac" firstAttribute="top" secondItem="uar-Wz-CeC" secondAttribute="bottom" constant="30" id="F3P-vk-JqS"/>
                             <constraint firstItem="uar-Wz-CeC" firstAttribute="top" secondItem="GdY-8j-H41" secondAttribute="bottom" constant="24" id="Utd-w1-uqg"/>
                             <constraint firstItem="uar-Wz-CeC" firstAttribute="leading" secondItem="JbW-u0-eMk" secondAttribute="leadingMargin" constant="-3" id="VOS-no-L5O"/>
                             <constraint firstItem="l9x-vG-Qac" firstAttribute="leading" secondItem="JbW-u0-eMk" secondAttribute="leadingMargin" constant="36" id="ZoA-h7-DDU"/>
                             <constraint firstItem="OGy-ed-Jek" firstAttribute="leading" secondItem="JbW-u0-eMk" secondAttribute="leading" id="aBE-D4-Uwe"/>
+                            <constraint firstItem="Ds4-Sa-tuM" firstAttribute="top" secondItem="l9x-vG-Qac" secondAttribute="bottom" constant="10" id="aEd-3X-OXs"/>
                             <constraint firstItem="l9x-vG-Qac" firstAttribute="centerY" secondItem="JbW-u0-eMk" secondAttribute="centerY" id="aN9-ts-SMd"/>
                             <constraint firstItem="l9x-vG-Qac" firstAttribute="centerX" secondItem="9y1-Eq-F2Q" secondAttribute="centerX" id="b3L-9w-qzM"/>
                             <constraint firstItem="9y1-Eq-F2Q" firstAttribute="leading" secondItem="OGy-ed-Jek" secondAttribute="leading" id="dSr-4m-on3"/>
                             <constraint firstItem="uar-Wz-CeC" firstAttribute="centerX" secondItem="OGy-ed-Jek" secondAttribute="centerX" id="fy2-ET-CSG"/>
                             <constraint firstItem="uar-Wz-CeC" firstAttribute="centerX" secondItem="JbW-u0-eMk" secondAttribute="centerX" id="j4z-NY-fHU"/>
                             <constraint firstItem="OGy-ed-Jek" firstAttribute="top" secondItem="JbW-u0-eMk" secondAttribute="topMargin" constant="-6" id="j6k-x4-nLh"/>
+                            <constraint firstItem="Ds4-Sa-tuM" firstAttribute="leading" secondItem="9y1-Eq-F2Q" secondAttribute="leading" id="o9O-we-1bi"/>
+                            <constraint firstItem="Ds4-Sa-tuM" firstAttribute="top" secondItem="l9x-vG-Qac" secondAttribute="bottom" constant="10" id="qHh-N7-R1E"/>
+                            <constraint firstItem="Ds4-Sa-tuM" firstAttribute="bottom" secondItem="DbD-Xi-wzM" secondAttribute="top" id="rwq-5u-iM1"/>
                             <constraint firstItem="uar-Wz-CeC" firstAttribute="centerX" secondItem="9y1-Eq-F2Q" secondAttribute="centerX" id="xHl-R7-EeN"/>
                         </constraints>
                     </view>
